подключил генерацию openapi.yml (переписал все под Enumы)
